# colabfit-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  vast_tools.ipynb
.github/: requirements.txt
.github/workflows/: unit-tests.yaml
cfkit/: configuration.py  configuration_set.py  converters.py  database.py  metadata.py  property.py  property_definitions.py
colabfit/: __init__.py
colabfit/api/: app.py  cli.py  configuration.py  forms.py  frontend.py  resources.py
colabfit/examples/: ANI-1.ipynb  ANI-1.py  AlNiTi_CMS2019.ipynb  COMP6.ipynb  CoNbV_CMS2019.ipynb  CuPd_CMS2019.ipynb  Dockerfile  InP_JPCA2020.ipynb  MoNbTaVW_PRB2021.ipynb  Mo_PRM2019.ipynb  Nb_PRM2019.ipynb  QM9.ipynb  Ta_Linear_JCP2015.ipynb  Ta_PRM2019.ipynb  TiZrHfTa_APS2021.ipynb  V_PRM2019.ipynb  WBe_PRB2019.ipynb  W_PRB2019.ipynb  basic_example.ipynb  comp6.ipynb  example.md  exploration.ipynb  qm9.ipynb  qm9.py  qm9_example.hdf5  si_prx_gap.ipynb
colabfit/tests/: example.py  legacy_test_dataset.py  playground.ipynb  playground.py  profilng.py  testConfigurations.py  testDatasets.py  test_client.py  test_configurations.py  test_database.py  test_hdf5backend.py  test_mongodatabase.py
colabfit/tools/: __init__.py  client.py  (+20 more)
core/: __init__.py  configuration.py  configuration_sets.py  converters.py  dataset.py  observable.py  property.py  property_sets.py  property_settings.py  transformations.py
docs/: CNAME  Makefile
examples/: AlNiTi_CMS2019.py  CarbonGap-20.ipynb  carbon_allotrope_vast_example.ipynb
tests/: .playground.py.swp  example.py  playground.py  testDatasets.py
(+304 files in other folders)
